--- a/.github/workflows/ci-validate-pr.yml
+++ b/.github/workflows/ci-validate-pr.yml
@@ -23,41 +23,36 @@ jobs:
       with:
         fetch-depth: 0
 
-    - name: Get yarn cache directory path
-      id: yarn-cache-dir-path
-      run: echo '::set-output name=dir::$(yarn cache dir)'
-
-    - name: Set up node_modules cache
-      uses: actions/cache@v3
-      id: yarn-cache
+    - name: Cache multiple paths
+      uses: actions/cache@v2
+      env:
+        cache-name: cache-node-modules
       with:
-        path: |
-          ${{ steps.yarn-cache-dir-path.outputs.dir }}
-          node_modules
-          */*/node_modules
-        key: ${{ runner.os }}-yarn_cache-${{ hashFiles('**/yarn.lock') }}
+        path: ~/.npm
+        key: ${{ runner.os }}-build-${{ env.cache-name }}-${{ hashFiles('**/package-lock.json') }}
         restore-keys: |
-          ${{ runner.os }}-yarn_cache-
+          ${{ runner.os }}-build-${{ env.cache-name }}-
+          ${{ runner.os }}-build-
+          ${{ runner.os }}-
 
     - name: Install package dependencies
-      run: yarn install --frozen-lockfile --ignore-scripts --prefer-offline
+      run: npm ci
 
     - name: Check for the presence of changed files inside ./change
-      run: yarn checkchange
+      run: npm run checkchange
 
     - name: Testing Prettier format
-      run: yarn format:check
+      run: npm run format:check
 
-    - name: Prepare workspaces
-      run: yarn prepare
+    - name: Build workspaces
+      run: npm run build
 
     - name: Install playwright dependencies and browsers
       run: |
-        yarn playwright install-deps
-        yarn playwright install
+        npx playwright install
 
     - name: Testing unit tests
-      run: yarn lerna run test --stream
+      run: npm run test
 
     - name: Testing final validation
-      run: yarn test:validation
+      run: npm run test:validation
