--- a/packages/web-components/fast-ssr/package.json
+++ b/packages/web-components/fast-ssr/package.json
@@ -18,10 +18,10 @@
   },
   "scripts": {
     "clean": "tsc -b --clean src",
-    "build": "tsc -b src && yarn doc",
+    "build": "tsc -b src && npm run doc",
     "doc": "api-extractor run --local",
     "doc:ci": "api-extractor run",
-    "prepare": "yarn run clean && yarn run build",
+    "prepublishOnly": "npm run clean && npm run build",
     "build-server": "tsc -b server",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
@@ -29,9 +29,8 @@
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.{ts,html}\" --list-different",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.{ts,html}\"",
     "test": "playwright test --config=playwright.config.cjs",
-    "test:watch": "chokidar '**/*.spec.ts' -c 'npm run build && npm run test'",
     "test-server": "node server/dist/server.js",
-    "install-playwright-browsers": "yarn playwright install"
+    "install-playwright-browsers": "npm run playwright install"
   },
   "description": "A package for rendering FAST Web Components outside the browser.",
   "main": "dist/esm/exports.js",
@@ -54,7 +53,7 @@
   },
   "dependencies": {
     "parse5": "^6.0.1",
-    "tslib": "2.4.0"
+    "tslib": "^2.6.3"
   },
   "peerDependencies": {
     "@microsoft/fast-element": "^2.0.0-beta.26"
@@ -62,12 +61,11 @@
   "devDependencies": {
     "@microsoft/fast-element": "^2.0.0-beta.26",
     "@microsoft/fast-foundation": "^3.0.0-alpha.33",
-    "@microsoft/api-extractor": "7.24.2",
+    "@microsoft/api-extractor": "^7.47.0",
     "@playwright/test": "^1.41.2",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.17",
-    "chokidar-cli": "^3.0.0",
     "express": "^4.17.1",
-    "typescript": "^4.7.0"
+    "typescript": "~5.3.0"
   }
 }
