Specify scan typescript only

--- a/.github/workflows/ci-validate-codeql.yml
+++ b/.github/workflows/ci-validate-codeql.yml
@@ -64,3 +64,5 @@ jobs:
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:typescript"
