Assign security write permissions to CodeQL workflow

--- a/.github/workflows/ci-validate-codeql.yml
+++ b/.github/workflows/ci-validate-codeql.yml
@@ -13,6 +13,9 @@ on:
   schedule:
     - cron: 0 7 * * 3
 
+permissions:
+  security-events: write
+
 jobs:
   cross-platform_cross-browser:
     runs-on: ${{ matrix.os }}
