--- a/.github/workflows/ci-validate-codeql.yml
+++ b/.github/workflows/ci-validate-codeql.yml
@@ -1,4 +1,4 @@
-name: Validate Platforms/Browsers
+name: Validate CodeQL
 
 on:
   workflow_dispatch:
@@ -13,6 +13,9 @@ on:
   schedule:
     - cron: 0 7 * * 3
 
+permissions:
+  security-events: write
+
 jobs:
   cross-platform_cross-browser:
     runs-on: ${{ matrix.os }}
@@ -20,7 +23,7 @@ jobs:
     strategy:
       fail-fast: true
       matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
+        os: [ubuntu-latest]
 
     env:
       PLAYWRIGHT_BROWSERS_PATH: 0
@@ -51,18 +54,12 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
 
-      - name: Install package dependencies
-        run: npm ci
+      - name: Initialize CodeQL
+        uses: github/codeql-action/init@v3
+        with:
+          languages: javascript-typescript
 
-      - name: Test Prettier format
-        run: npm run format:check
-
-      - name: Build workspaces
-        run: npm run build
-
-      - name: Install playwright dependencies and browsers
-        run: |
-          npx playwright install
-
-      - name: Run tests in all Packages
-        run: npm run test
+      - name: Perform CodeQL Analysis
+        uses: github/codeql-action/analyze@v3
+        with:
+          category: "/language:javascript-typescript"
