--- a/packages/web-components/fast-ssr/package.json
+++ b/packages/web-components/fast-ssr/package.json
@@ -67,5 +67,13 @@
     "@types/node": "^17.0.17",
     "express": "^4.19.2",
     "typescript": "~5.3.0"
+  },
+  "beachball": {
+    "disallowedChangeTypes": [
+      "major",
+      "minor",
+      "patch"
+    ],
+    "tag": "beta"
   }
 }
