--- a/packages/web-components/fast-ssr/package.json
+++ b/packages/web-components/fast-ssr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@microsoft/fast-ssr",
-  "version": "1.0.0-beta.33",
+  "version": "1.0.0-beta.34",
   "type": "module",
   "author": {
     "name": "Microsoft",
@@ -56,7 +56,7 @@
     "tslib": "^2.6.3"
   },
   "peerDependencies": {
-    "@microsoft/fast-element": "^2.0.0-beta.26"
+    "@microsoft/fast-element": "^2.0.0"
   },
   "devDependencies": {
     "@microsoft/fast-element": "^2.0.0-beta.26",
