chore: update beachball for versioning FAST Element to a major release (#7015)
* update beachball and move disallowedChangeTypes to package.json

* Change files

* Update readme

* Change files

* update readme

--- a/packages/web-components/fast-router/package.json
+++ b/packages/web-components/fast-router/package.json
@@ -82,5 +82,13 @@
   },
   "dependencies": {
     "@microsoft/fast-element": "^2.0.0-beta.26"
+  },
+  "beachball": {
+    "disallowedChangeTypes": [
+      "major",
+      "minor",
+      "patch"
+    ],
+    "tag": "alpha"
   }
 }
