applying package updates

--- a/examples/todo-app/package.json
+++ b/examples/todo-app/package.json
@@ -22,7 +22,7 @@
     "directory": "examples/todo-app"
   },
   "dependencies": {
-    "@microsoft/fast-element": "^2.0.0-beta.26",
+    "@microsoft/fast-element": "^2.0.0",
     "@microsoft/fast-foundation": "^3.0.0-alpha.33",
     "tslib": "^2.6.3"
   },
