--- a/examples/ssr/package.json
+++ b/examples/ssr/package.json
@@ -23,9 +23,9 @@
     "directory": "examples/ssr"
   },
   "dependencies": {
-    "@microsoft/fast-element": "^2.0.0-beta.26",
+    "@microsoft/fast-element": "^2.0.0",
     "@microsoft/fast-foundation": "^3.0.0-alpha.33",
-    "@microsoft/fast-ssr": "^1.0.0-beta.33",
+    "@microsoft/fast-ssr": "^1.0.0-beta.35",
     "express": "^4.19.2",
     "fast-todo-app": "1.0.0",
     "ts-loader": "^9.3.0",
