--- a/packages/web-components/fast-router/package.json
+++ b/packages/web-components/fast-router/package.json
@@ -2,7 +2,7 @@
   "name": "@microsoft/fast-router",
   "description": "A web-components-based router.",
   "sideEffects": false,
-  "version": "1.0.0-alpha.27",
+  "version": "1.0.0-alpha.28",
   "author": {
     "name": "Microsoft",
     "url": "https://discord.gg/FcSNfg4"
@@ -81,7 +81,7 @@
     "webpack-cli": "^5.1.4"
   },
   "dependencies": {
-    "@microsoft/fast-element": "^2.0.0-beta.26"
+    "@microsoft/fast-element": "^2.0.0"
   },
   "beachball": {
     "disallowedChangeTypes": [
