--- a/.github/workflows/cd-release-npm.yml
+++ b/.github/workflows/cd-release-npm.yml
@@ -66,7 +66,7 @@ jobs:
     - name: Publish NPM packages
       env:
         NPM_SECRET_TOKEN: ${{ secrets.NPM_TOKEN }}
-      run: npm run publish-ci -n $NPM_SECRET_TOKEN
+      run: npm run publish-ci -- --token "$NPM_SECRET_TOKEN"
 
   notify:
     runs-on: ubuntu-latest
