--- a/packages/web-components/fast-router/package.json
+++ b/packages/web-components/fast-router/package.json
@@ -48,6 +48,7 @@
   "devDependencies": {
     "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
     "@microsoft/api-extractor": "^7.47.0",
+    "@microsoft/fast-element": "^2.0.0",
     "@types/chai": "^4.2.11",
     "@types/karma": "^6.3.3",
     "@types/mocha": "^7.0.2",
@@ -80,7 +81,7 @@
     "webpack": "^5.92.1",
     "webpack-cli": "^5.1.4"
   },
-  "dependencies": {
+  "peerDependencies": {
     "@microsoft/fast-element": "^2.0.0"
   },
   "beachball": {
