--- a/.npmrc
+++ b/.npmrc
@@ -1,4 +1,1 @@
-//registry.npmjs.org/:_authToken=$NPM_TOKEN
-@microsoft:registry=https://registry.npmjs.org/
-always-auth=true
-package-lock=false
+registry=https://registry.npmjs.org/
