--- a/package.json
+++ b/package.json
@@ -1,42 +1,26 @@
 {
-  "name": "@microsoft/fast",
-  "description": "An unopinionated system of components, development tools, and utilities used à la carte or as a suite to build enterprise-grade websites and applications.",
-  "version": "1.8.0",
+  "name": "@ni/fast",
+  "description": "NI fork of Microsoft FAST to support the NI Nimble Design System.",
+  "version": "1.0.0",
   "author": {
-    "name": "Microsoft",
-    "url": "https://discord.gg/FcSNfg4"
+    "name": "National Instruments"
   },
   "license": "MIT",
   "private": true,
-  "workspaces": {
-    "packages": [
-      "packages/**/*",
-      "sites/fast-color-explorer",
-      "sites/site-utilities",
-      "sites/fast-website",
-      "sites/website",
-      "examples/design-system-tutorial"
-    ],
-    "nohoist": [
-      "**/@types/chai",
-      "**/@types/karma",
-      "**/@types/mocha",
-      "**/@types/node",
-      "**/chai",
-      "**/html-minifier-terser",
-      "**/react-syntax-highlighter"
-    ]
-  },
-  "engines": {
-    "yarn": ">=1.13 <2",
-    "node": ">15.0.0"
-  },
+  "workspaces": [
+    "packages/utilities/fast-eslint-rules",
+    "packages/utilities/fast-colors",
+    "packages/utilities/fast-web-utilities",
+    "packages/web-components/fast-element",
+    "packages/web-components/fast-foundation",
+    "packages/utilities/fast-react-wrapper"
+  ],
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Microsoft/fast.git"
+    "url": "git+https://github.com/ni/fast.git"
   },
   "bugs": {
-    "url": "https://github.com/Microsoft/fast/issues/new/choose"
+    "url": "https://github.com/ni/fast/issues/new/choose"
   },
   "scripts": {
     "bump": "beachball bump",
@@ -48,7 +32,6 @@
     "integration-tests:alpha": "node build/testing/sauce-labs/test-browsers.js alpha",
     "integration-tests:beta": "node build/testing/sauce-labs/test-browsers.js beta",
     "integration-tests:release": "node build/testing/sauce-labs/test-browsers.js release",
-    "prepare": "lerna run prepare",
     "test:diff:error": "echo \"Untracked files exist, try running yarn prepare to identify the culprit.\" && exit 1",
     "test:diff": "git update-index --refresh && git diff-index --quiet HEAD -- || yarn test:diff:error",
     "test:validation": "yarn test:diff",
@@ -56,42 +39,6 @@
     "watch": "tsc -p ./tsconfig.json -w --preserveWatchOutput",
     "format:check": "lerna run prettier:diff",
     "format": "lerna run prettier"
-  },
-  "husky": {
-    "hooks": {
-      "pre-commit": "lint-staged"
-    }
-  },
-  "lint-staged": {
-    "*.{ts,tsx,js,html}": [
-      "prettier --write"
-    ]
-  },
-  "resolutions": {
-    "@microsoft/fast-tooling": "^0.37.7",
-    "@types/react": "^16.14.0",
-    "browserslist": "^4.16.5",
-    "clean-css": "^4.2.3",
-    "css-select": "^4.2.1",
-    "dns-packet": "^1.3.4",
-    "favicons/colors": "1.4.0",
-    "glob-parent": "^5.1.2",
-    "immer": "^9.0.6",
-    "is-svg": "^4.2.2",
-    "jimp": "^0.16.1",
-    "jpeg-js": "^0.4.3",
-    "js-yaml": "^3.13.1",
-    "karma/colors": "1.4.0",
-    "lodash": "^4.17.21",
-    "nanoid": "^3.1.31",
-    "node-notifier": "^9.0.0",
-    "node-gyp": "^9.0.0",
-    "trim-newlines": "^4.0.2",
-    "trim": "^0.0.3",
-    "typescript": "^4.6.2",
-    "ua-parser-js": "^0.7.28",
-    "ws": "^7.4.6",
-    "xmlhttprequest-ssl": "^1.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
@@ -102,22 +49,13 @@
     "beachball": "^2.24.0",
     "chalk": "^2.4.2",
     "copyfiles": "^2.4.1",
-    "docusaurus-init": "^1.11.0",
     "dotenv": "^6.0.0",
-    "eyes.selenium": "3.6.2",
     "glob": "^7.1.2",
-    "husky": "^4.2.5",
-    "lerna": "^5.5.2",
-    "lint-staged": "^10.1.2",
     "markdown-it": "^12.3.2",
     "prettier": "2.0.2",
     "rimraf": "^3.0.2",
     "ts-node": "^8.8.2",
     "typescript": "^4.6.2",
     "yargs": "^16.2.0"
-  },
-  "dependencies": {
-    "saucelabs": "^1.5.0",
-    "selenium-webdriver": "^3.6.0"
   }
 }
