--- a/package.json
+++ b/package.json
@@ -25,17 +25,17 @@
   "scripts": {
     "bump": "beachball bump",
     "change": "beachball change --branch origin/archives/fast-element-1",
-    "checkchange": "beachball check --branch origin/archives/fast-element-1 --scope \"!sites/*\" --changehint \"Run 'yarn change' to generate a change file\"",
+    "checkchange": "beachball check --branch origin/archives/fast-element-1 --scope \"!sites/*\" --changehint \"Run 'npm run change' to generate a change file\"",
     "check": "beachball check ",
     "publish": "beachball publish",
     "publish-ci": "beachball publish -y --access public -b origin/archives/fast-element-1",
     "integration-tests:alpha": "node build/testing/sauce-labs/test-browsers.js alpha",
     "integration-tests:beta": "node build/testing/sauce-labs/test-browsers.js beta",
     "integration-tests:release": "node build/testing/sauce-labs/test-browsers.js release",
-    "test:diff:error": "echo \"Untracked files exist, try running yarn prepare to identify the culprit.\" && exit 1",
-    "test:diff": "git update-index --refresh && git diff-index --quiet HEAD -- || yarn test:diff:error",
-    "test:validation": "yarn test:diff",
-    "test": "yarn eslint \"/**/*.{ts}\" ",
+    "test:diff:error": "echo \"Untracked files exist, try running npm run prepare to identify the culprit.\" && exit 1",
+    "test:diff": "git update-index --refresh && git diff-index --quiet HEAD -- || npm run test:diff:error",
+    "test:validation": "npm run test:diff",
+    "test": "npm run eslint \"/**/*.{ts}\" ",
     "watch": "tsc -p ./tsconfig.json -w --preserveWatchOutput",
     "format:check": "lerna run prettier:diff",
     "format": "lerna run prettier"
@@ -45,7 +45,7 @@
     "@babel/preset-env": "^7.12.13",
     "@octokit/rest": "^18.0.6",
     "@types/lodash-es": "^4.17.4",
-    "@types/node": "^15.0.1",
+    "@types/node": "^22",
     "beachball": "^2.24.0",
     "chalk": "^2.4.2",
     "copyfiles": "^2.4.1",
