--- a/packages/utilities/fast-web-utilities/package.json
+++ b/packages/utilities/fast-web-utilities/package.json
@@ -18,11 +18,11 @@
   "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc -p ./tsconfig.build.json",
+    "build": "npm run clean:dist && tsc -p ./tsconfig.build.json",
     "clean:dist": "node ../../../build/clean.js dist",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.ts\"",
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
-    "test": "yarn eslint && yarn build && yarn test-chrome:verbose",
+    "test": "npm run eslint && npm run build && npm run test-chrome:verbose",
     "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-chrome": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --single-run --coverage",
@@ -36,7 +36,7 @@
     "test-firefox:watch": "karma start karma.conf.ts --browsers=FirefoxHeadless   --coverage --watch-extensions js",
     "eslint": "eslint . --ext .ts,.tsx",
     "eslint:fix": "eslint . --ext .ts,.tsx --fix",
-    "watch": "yarn build -- -w --preserveWatchOutput"
+    "watch": "npm run build -- -w --preserveWatchOutput"
   },
   "devDependencies": {
     "@types/chai": "^4.2.11",
