--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -20,20 +20,18 @@
   "type": "module",
   "scripts": {
     "clean:dist": "node ../../../build/clean.js dist",
+    "doc": "api-extractor run --local",
     "build:rollup": "rollup -c",
     "build:tsc": "tsc -p ./tsconfig.json",
-    "build": "npm run clean:dist && npm run build:tsc && npm run build:rollup && npm run doc && npm run cem",
+    "build": "npm run clean:dist && npm run build:tsc && npm run build:rollup && npm run doc",
     "dev": "tsc -p ./tsconfig.json -w",
-    "cem": "npm run cem-analyze && npm run cem-markdown",
-    "cem-analyze": "cem analyze",
-    "cem-markdown": "node CEMToMarkdown.mjs",
     "tdd": "npm run dev & npm run test-chrome:watch",
     "tdd:firefox": "npm run dev & npm run test-firefox:watch",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.ts\"",
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
-    "test": "npm run eslint && npm run test-chrome:verbose && npm run doc:ci",
+    "test": "npm run eslint && npm run test-chrome:verbose",
     "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage",
@@ -49,6 +47,7 @@
   "devDependencies": {
     "@custom-elements-manifest/analyzer": "^0.5.7",
     "@custom-elements-manifest/to-markdown": "^0.1.0",
+    "@microsoft/api-extractor": "7.23.1",
     "@types/chai": "^4.2.11",
     "@types/karma": "^5.0.0",
     "@types/mocha": "^7.0.2",
