--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "scripts": {
     "build": "npm run build --workspaces --if-present",
+    "pack": "npm run pack --workspaces --if-present",
     "bump": "beachball bump",
     "change": "beachball change --branch origin/archives/fast-element-1",
     "checkchange": "beachball check --branch origin/archives/fast-element-1 --scope \"!sites/*\" --changehint \"Run 'npm run change' to generate a change file\"",
