--- a/packages/web-components/fast-element/.npmignore
+++ b/packages/web-components/fast-element/.npmignore
@@ -1,22 +1,5 @@
-# Tests
+*
+!dist/**
 dist/dts/__test__/
 dist/esm/__test__/
 *.spec.*
-coverage/
-
-# Source files
-src/
-
-# config files
-.eslintignore
-.eslintrc.js
-.mocharc.json
-.prettierignore
-api-extractor.json
-karma.conf.js
-rollup.config.js
-tsconfig.json
-
-# cache
-.rollupcache
-temp
