Setup beachball publishing

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,8 +64,8 @@ jobs:
           if-no-files-found: error
 
       # Validate (Lint and Test)
-      - run: npm run lint
-      - run: npm run test
+      # - run: npm run lint
+      # - run: npm run test
 
       # Check Changelog
       - if: github.repository_owner == 'ni'
