--- a/package.json
+++ b/package.json
@@ -25,22 +25,10 @@
   "scripts": {
     "build": "npm run build --workspaces --if-present",
     "pack": "npm run pack --workspaces --if-present",
-    "bump": "beachball bump",
-    "change": "beachball change --branch origin/archives/fast-element-1",
-    "checkchange": "beachball check --branch origin/archives/fast-element-1 --scope \"!sites/*\" --changehint \"Run 'npm run change' to generate a change file\"",
-    "check": "beachball check ",
-    "publish": "beachball publish",
-    "publish-ci": "beachball publish -y --access public -b origin/archives/fast-element-1",
-    "integration-tests:alpha": "node build/testing/sauce-labs/test-browsers.js alpha",
-    "integration-tests:beta": "node build/testing/sauce-labs/test-browsers.js beta",
-    "integration-tests:release": "node build/testing/sauce-labs/test-browsers.js release",
-    "test:diff:error": "echo \"Untracked files exist, try running npm run prepare to identify the culprit.\" && exit 1",
-    "test:diff": "git update-index --refresh && git diff-index --quiet HEAD -- || npm run test:diff:error",
-    "test:validation": "npm run test:diff",
-    "test": "npm run eslint \"/**/*.{ts}\" ",
-    "watch": "tsc -p ./tsconfig.json -w --preserveWatchOutput",
-    "format:check": "lerna run prettier:diff",
-    "format": "lerna run prettier"
+    "change": "beachball change",
+    "check": "beachball check --changehint \"Run 'npm run change' to generate a change file\"",
+    "sync": "beachball sync",
+    "invoke-publish": "cross-env-shell beachball publish --yes --access public --message \\\"applying package updates [skip ci]\\\" -n $NPM_SECRET_TOKEN"
   },
   "devDependencies": {
     "@babel/core": "^7.12.13",
@@ -51,6 +39,7 @@
     "beachball": "^2.24.0",
     "chalk": "^2.4.2",
     "copyfiles": "^2.4.1",
+    "cross-env": "^7.0.3",
     "dotenv": "^6.0.0",
     "glob": "^7.1.2",
     "markdown-it": "^12.3.2",
