--- a/packages/utilities/fast-react-wrapper/package.json
+++ b/packages/utilities/fast-react-wrapper/package.json
@@ -14,6 +14,9 @@
   "bugs": {
     "url": "https://github.com/ni/fast/issues/new/choose"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "dist/esm/index.js",
   "type": "module",
   "types": "dist/fast-react-wrapper.d.ts",
