--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -14,6 +14,9 @@
   "bugs": {
     "url": "https://github.com/ni/fast/issues/new/choose"
   },
+  "publishConfig": {
+    "access": "public"
+  },
   "main": "dist/esm/index.js",
   "types": "dist/fast-foundation.d.ts",
   "unpkg": "dist/fast-foundation.min.js",
