--- a/package.json
+++ b/package.json
@@ -25,6 +25,9 @@
   "scripts": {
     "build": "npm run build --workspaces --if-present",
     "pack": "npm run pack --workspaces --if-present",
+    "lint": "npm run lint --workspaces --if-present",
+    "format": "npm run format --workspaces --if-present",
+    "test": "npm run test --workspaces --if-present",
     "change": "beachball change",
     "check": "beachball check --changehint \"Run 'npm run change' to generate a change file\"",
     "sync": "beachball sync",
