--- a/packages/utilities/fast-react-wrapper/package.json
+++ b/packages/utilities/fast-react-wrapper/package.json
@@ -22,17 +22,19 @@
   "types": "dist/fast-react-wrapper.d.ts",
   "unpkg": "dist/fast-react-wrapper.min.js",
   "scripts": {
-    "clean:dist": "node ../../../build/clean.js dist",
-    "doc": "api-extractor run --local",
     "build": "npm run clean:dist && tsc -p ./tsconfig.json && rollup -c && npm run doc",
     "pack": "npm pack",
+    "lint": "npm run eslint",
+    "format": "npm run eslint:fix",
+    "test": "npm run test-chrome:verbose",
+    "clean:dist": "node ../../../build/clean.js dist",
+    "doc": "api-extractor run --local",
     "dev": "tsc -p ./tsconfig.json -w",
     "tdd": "npm run dev & npm run test-chrome:watch",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.ts\"",
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
-    "test": "npm run eslint && npm run test-chrome:verbose",
     "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage",
