--- a/packages/utilities/fast-web-utilities/package.json
+++ b/packages/utilities/fast-web-utilities/package.json
@@ -23,10 +23,12 @@
   "scripts": {
     "build": "npm run clean:dist && tsc -p ./tsconfig.build.json",
     "pack": "npm pack",
+    "lint": "echo \"TODO: fix eslint execution\"",
+    "format": "npm run eslint:fix",
+    "test": "npm run build && npm run test-chrome:verbose",
     "clean:dist": "node ../../../build/clean.js dist",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.ts\"",
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
-    "test": "npm run eslint && npm run build && npm run test-chrome:verbose",
     "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-chrome": "karma start karma.conf.ts --browsers=ChromeHeadlessOpt --single-run --coverage",
