--- a/packages/web-components/fast-element/package.json
+++ b/packages/web-components/fast-element/package.json
@@ -22,10 +22,13 @@
   "type": "module",
   "unpkg": "dist/fast-element.min.js",
   "scripts": {
-    "clean:dist": "node ../../../build/clean.js dist",
-    "doc": "api-extractor run --local",
     "build": "npm run clean:dist && npm run build:tsc && npm run build:rollup && npm run doc",
     "pack": "npm pack",
+    "lint": "npm run eslint",
+    "format": "npm run eslint:fix",
+    "test": "npm run test-chrome:verbose",
+    "clean:dist": "node ../../../build/clean.js dist",
+    "doc": "api-extractor run --local",
     "build:rollup": "rollup -c",
     "build:tsc": "tsc -p ./tsconfig.json",
     "dev": "tsc -p ./tsconfig.json -w",
@@ -34,7 +37,6 @@
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
-    "test": "npm run eslint && npm run test-chrome:verbose",
     "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage",
