--- a/packages/web-components/fast-foundation/package.json
+++ b/packages/web-components/fast-foundation/package.json
@@ -22,12 +22,15 @@
   "unpkg": "dist/fast-foundation.min.js",
   "type": "module",
   "scripts": {
+    "build": "npm run clean:dist && npm run build:tsc && npm run build:rollup && npm run doc",
+    "pack": "npm pack",
+    "lint": "npm run eslint",
+    "format": "npm run eslint:fix",
+    "test": "npm run test-chrome:verbose",
     "clean:dist": "node ../../../build/clean.js dist",
     "doc": "api-extractor run --local",
     "build:rollup": "rollup -c",
     "build:tsc": "tsc -p ./tsconfig.json",
-    "build": "npm run clean:dist && npm run build:tsc && npm run build:rollup && npm run doc",
-    "pack": "npm pack",
     "dev": "tsc -p ./tsconfig.json -w",
     "tdd": "npm run dev & npm run test-chrome:watch",
     "tdd:firefox": "npm run dev & npm run test-firefox:watch",
@@ -35,7 +38,6 @@
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
     "eslint": "eslint . --ext .ts",
     "eslint:fix": "eslint . --ext .ts --fix",
-    "test": "npm run eslint && npm run test-chrome:verbose",
     "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-node:verbose": "mocha --reporter spec --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
     "test-chrome": "karma start karma.conf.cjs --browsers=ChromeHeadlessOpt --single-run --coverage",
