Dependency Update January 2025 (#2)
# Pull Request

## 📖 Description

Updates dependencies to latest with the following exceptions:
```
Package                    Current   Wanted  Latest 
@rollup/plugin-typescript   11.1.6   11.1.6  12.1.2
@types/react               18.3.18  18.3.18  19.0.7
@types/react-dom            18.3.5   18.3.5  19.0.3
eslint                      8.57.1   8.57.1  9.18.0 
react                       18.3.1   18.3.1  19.0.0
react-dom                   18.3.1   18.3.1  19.0.0
typescript                   5.4.5    5.4.5   5.7.3
```

React: Nimble does not support React > 18
eslint: Didn't migrate to ESLint > 8 new config changes
TypeScript: Aligned to the Nimble TypeScript version
`@rollup/plugin-typescript`: v12 introduced an intentional breaking
change that forces certain directory structures in build output:
https://github.com/rollup/plugins/issues/1772#issuecomment-2369307102

--- a/packages/web-components/fast-element/.eslintrc.json
+++ b/packages/web-components/fast-element/.eslintrc.json
@@ -3,17 +3,9 @@
     "rules": {
         "max-classes-per-file": "off",
         "no-case-declarations": "off",
-        "@typescript-eslint/ban-types": [
-            "error",
-            {
-                "types": {
-                    "{}": false,
-                    "Function": false,
-                    "Object": false
-                },
-                "extendDefaults": true
-            }
-        ],
+        "@typescript-eslint/no-empty-object-type": "off",
+        "@typescript-eslint/no-unsafe-function-type": "off",
+        "@typescript-eslint/no-wrapper-object-types": "error",
         "@typescript-eslint/no-use-before-define": ["error", { "typedefs": false }],
         "@typescript-eslint/no-non-null-assertion": "off",
         "@typescript-eslint/explicit-function-return-type": [
@@ -25,6 +17,7 @@
         "import/extensions": [
             "error",
             "always"
-        ]
+        ],
+        "@typescript-eslint/no-unused-expressions": "warn"
     }
 }
