--- a/packages/web-components/fast-element/tsconfig.json
+++ b/packages/web-components/fast-element/tsconfig.json
@@ -4,6 +4,7 @@
         "declarationDir": "dist/dts",
         "outDir": "dist/esm",
         "importsNotUsedAsValues": "error",
+        "ignoreDeprecations": "5.0",
         "experimentalDecorators": true,
         "noImplicitAny": false,
         "strictPropertyInitialization": false,
