--- a/packages/utilities/fast-colors/package.json
+++ b/packages/utilities/fast-colors/package.json
@@ -26,8 +26,8 @@
     "lint": "npm run eslint",
     "format": "npm run eslint:fix",
     "test": "npm run build:tests && npm run unit-tests",
-    "build:tests": "npm run clean:dist && tsc -p ./tsconfig.test.json && npm run doc",
-    "clean:dist": "node ../../../build/clean.js dist",
+    "build:tests": "tsc -p ./tsconfig.test.json",
+    "clean:dist": "rimraf dist",
     "doc": "api-extractor run --local",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.ts\"",
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
@@ -38,14 +38,15 @@
     "watch": "npm run build -- -w --preserveWatchOutput"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "7.23.1",
-    "@types/chai": "^4.2.11",
-    "@types/mocha": "^8.2.0",
-    "chai": "^4.2.0",
-    "mocha": "^8.2.1",
+    "@microsoft/api-extractor": "7.49.1",
+    "@types/chai": "^5.0.1",
+    "@types/mocha": "^10.0.10",
+    "chai": "^5.1.2",
+    "mocha": "^11.0.1",
     "@ni/eslint-config-fast-dna": "^1.0.0",
-    "eslint-config-prettier": "^6.10.1",
-    "prettier": "2.0.2",
-    "typescript": "^4.6.2"
+    "eslint-config-prettier": "^10.0.1",
+    "prettier": "3.4.2",
+    "rimraf": "^6.0.1",
+    "typescript": "~5.4.5"
   }
 }
