--- a/packages/utilities/fast-react-wrapper/package.json
+++ b/packages/utilities/fast-react-wrapper/package.json
@@ -27,7 +27,7 @@
     "lint": "npm run eslint",
     "format": "npm run eslint:fix",
     "test": "npm run test-chrome:verbose",
-    "clean:dist": "node ../../../build/clean.js dist",
+    "clean:dist": "rimraf dist",
     "doc": "api-extractor run --local",
     "dev": "tsc -p ./tsconfig.json -w",
     "tdd": "npm run dev & npm run test-chrome:watch",
@@ -47,53 +47,50 @@
     "test-firefox:verbose": "karma start karma.conf.cjs --browsers=FirefoxHeadless --single-run --coverage --reporter=mocha"
   },
   "devDependencies": {
-    "@microsoft/api-extractor": "7.23.1",
-    "@types/chai": "^4.2.11",
-    "@types/karma": "^5.0.0",
-    "@types/mocha": "^7.0.2",
-    "@types/react-dom": "^16.9.0",
+    "@microsoft/api-extractor": "7.49.1",
+    "@types/chai": "^5.0.1",
+    "@types/karma": "^6.3.9",
+    "@types/mocha": "^10.0.10",
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@types/webpack-env": "^1.15.2",
-    "chai": "^4.2.0",
+    "chai": "^5.1.2",
     "esm": "^3.2.25",
     "ignore-loader": "^0.1.2",
-    "istanbul": "^0.4.5",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "jsdom": "^16.2.2",
+    "jsdom": "^26.0.0",
     "jsdom-global": "3.0.2",
-    "karma": "^5.0.4",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.2",
-    "karma-coverage-istanbul-reporter": "^3.0.0",
     "karma-firefox-launcher": "^2.1.0",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-source-map-support": "^1.4.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.2",
-    "mocha": "^7.1.2",
-    "prettier": "2.0.2",
-    "react": "^16.9.0",
-    "react-dom": "^16.9.0",
-    "rollup": "^2.7.6",
-    "rollup-plugin-commonjs": "^10.1.0",
-    "rollup-plugin-filesize": "^9.1.2",
-    "rollup-plugin-node-resolve": "^5.2.0",
-    "rollup-plugin-terser": "^5.3.0",
-    "rollup-plugin-transform-tagged-template": "^0.0.3",
-    "rollup-plugin-typescript2": "^0.27.0",
+    "karma-sourcemap-loader": "^0.4.0",
+    "karma-webpack": "^5.0.1",
+    "mocha": "^11.0.1",
+    "prettier": "3.4.2",
+    "react": "^18",
+    "react-dom": "^18",
+    "rimraf": "^6.0.1",
+    "rollup": "^4.30.1",
+    "@rollup/plugin-commonjs": "^28.0.0",
+    "rollup-plugin-filesize": "^10.0.0",
+    "@rollup/plugin-node-resolve": "^16.0.0",
+    "@rollup/plugin-terser": "^0.4.0",
+    "@rollup/plugin-typescript": "^11",
     "source-map": "^0.7.3",
-    "source-map-loader": "^0.2.4",
-    "ts-loader": "^7.0.2",
-    "ts-node": "^8.9.1",
-    "tsconfig-paths": "^3.9.0",
-    "typescript": "^4.6.2",
-    "webpack": "^4.44.0"
+    "source-map-loader": "^5.0.0",
+    "ts-loader": "^9.5.2",
+    "ts-node": "^10.9.2",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "~5.4.5",
+    "webpack": "^5.97.1"
   },
   "dependencies": {
     "@ni/fast-element": "^0.0.3",
     "@ni/fast-foundation": "^0.0.4"
   },
   "peerDependencies": {
-    "react": ">=16.9.0"
+    "react": "^18"
   }
 }
