--- a/packages/utilities/fast-web-utilities/package.json
+++ b/packages/utilities/fast-web-utilities/package.json
@@ -23,10 +23,10 @@
   "scripts": {
     "build": "npm run clean:dist && tsc -p ./tsconfig.build.json",
     "pack": "npm pack",
-    "lint": "echo \"TODO: fix eslint execution\"",
+    "lint": "npm run eslint",
     "format": "npm run eslint:fix",
     "test": "npm run build && npm run test-chrome:verbose",
-    "clean:dist": "node ../../../build/clean.js dist",
+    "clean:dist": "rimraf dist",
     "prettier": "prettier --config ../../../.prettierrc --write \"**/*.ts\"",
     "prettier:diff": "prettier --config ../../../.prettierrc \"**/*.ts\" --list-different",
     "test-node": "mocha --reporter min --exit dist/esm/__test__/setup-node.js './dist/esm/**/*.spec.js'",
@@ -45,32 +45,29 @@
     "watch": "npm run build -- -w --preserveWatchOutput"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.11",
-    "@types/karma": "^5.0.0",
-    "@types/mocha": "^7.0.2",
+    "@types/chai": "^5.0.1",
+    "@types/chai-spies": "^1.0.3",
+    "@types/karma": "^6.3.9",
+    "@types/mocha": "^10.0.10",
     "@ni/eslint-config-fast-dna": "^1.0.0",
-    "chai": "^4.2.0",
+    "chai": "^5.1.2",
     "chai-spies": "^1.0.0",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-loader": "^4.0.0",
-    "istanbul": "^0.4.5",
-    "istanbul-instrumenter-loader": "^3.0.1",
-    "jsdom": "^16.2.2",
+    "eslint-config-prettier": "^10.0.1",
+    "jsdom": "^26.0.0",
     "jsdom-global": "3.0.2",
-    "karma": "^5.0.4",
+    "karma": "^6.4.4",
     "karma-chrome-launcher": "^3.1.0",
-    "karma-coverage": "^2.0.2",
-    "karma-coverage-istanbul-reporter": "^3.0.0",
     "karma-firefox-launcher": "^2.1.0",
     "karma-mocha": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
     "karma-source-map-support": "^1.4.0",
-    "karma-sourcemap-loader": "^0.3.7",
-    "karma-webpack": "^4.0.2",
-    "mocha": "^7.1.2",
-    "prettier": "2.0.2",
-    "ts-loader": "^4.0.1",
-    "typescript": "^4.6.2"
+    "karma-sourcemap-loader": "^0.4.0",
+    "karma-webpack": "^5.0.1",
+    "mocha": "^11.0.1",
+    "prettier": "3.4.2",
+    "rimraf": "^6.0.1",
+    "ts-loader": "^9.5.2",
+    "typescript": "~5.4.5"
   },
   "dependencies": {
     "exenv-es6": "^1.1.1"
