--- a/packages/web-components/fast-foundation/tsconfig.json
+++ b/packages/web-components/fast-foundation/tsconfig.json
@@ -7,6 +7,7 @@
         "suppressImplicitAnyIndexErrors": true,
         "strictPropertyInitialization": false,
         "importsNotUsedAsValues": "error",
+        "ignoreDeprecations": "5.0",
         "target": "es2015",
         "module": "ESNext",
         "importHelpers": true,
